Update: Enable active access javafx.media