@@ -60,6 +60,7 @@
                     <mainClass>com.vbay.MainApp</mainClass>
                     <options>
                         <option>--enable-native-access=javafx.graphics</option>
+                        <option>--enable-native-access=javafx.media</option>
                     </options>
                 </configuration>
             </plugin>
